<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskifyA</string>

    <!-- Strings de Personalización -->
    <string name="personalizacion_y_configuracion">Personalización y Configuración</string>
    <string name="temas">Temas</string>
    <string name="notificaciones_alarmas">Notificaciones / Alarmas</string>
    <string name="ayuda_rapida">Ayuda Rápida</string>
    <string name="copia_de_seguridad">Copia de Seguridad</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="color_de_tema">COLOR DE TEMA</string>
    <string name="presiona_el_boton_para_iniciar_la_copia">Presiona el botón para iniciar la copia</string>
    <string name="titulo_ayuda">AYUDA / GUÍA RÁPIDA</string>
    <string name="contenido_ayuda">
        Aquí va el contenido de la guía rápida. Puedes reemplazar este texto con toda la información que necesites mostrar.
        Bienvenido a tu app. Aquí encontrarás lo básico para empezar a organizar tus tareas y actividades.
        • Usuario:
          Registra el correo con el que te gustaría tener tus copias de seguridad, así como contraseña y nombre de usuario.
        • Perfil:
          Agrega o edita tu perfil de manera personalizada.
        • Recordatorios:
          Configura, agrega, edita y elimina avisos con hora y notificación.
        • Notas:
          Organiza tus ideas a través de estas.
        • Calendario:
          Visualiza tus actividades y eventos de manera organizada.
    </string>
    <string name="hacer_copia_de_seguridad">Hacer copia de seguridad</string>
    <string name="activar_notificaciones">Activar Notificaciones</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="activar_notificaciones2">Activar notificaciones</string>
    <string name="tema_rosa">Tema Rosa</string>

    <!-- Strings de Calendario -->
    <string-array name="categorias_array">
        <item>PERSONAL</item>
        <item>ACADEMICO</item>
        <item>TRABAJO</item>
    </string-array>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>

</resources>